Fixed Spacing in the h1 Logo

--- a/styles.css
+++ b/styles.css
@@ -41,8 +41,11 @@ nav{width:100%;background-color:var(--black);top:0;box-shadow:0 .55rem .7rem rgb
 .paragon_logo{white-space:nowrap;display:block;height:fit-content;margin:0 auto}
 h1{padding-left:10px;white-space:normal;vertical-align:top;display:none;margin-top:5px}
 h1 .paragon{font-family:futura-pt,roboto,tahoma,sans-serif;font-style:normal;letter-spacing:.65px;height:fit-content;font-display:swap;}
+h1 .h1_p{letter-spacing: -2px;}
+h1 .h1_r{letter-spacing: 1.5px;}
+h1 .h1_a{letter-spacing: -1.5px;}
 .games_hover,.nav_link,footer button,h1 .escape{color:var(--white)}
-h1 .escape{line-height:1;font-family:courier-std,courier,monospace;font-weight:400;font-style:normal;letter-spacing:6.1px;font-display:swap;}
+h1 .escape{line-height:1;font-family:courier-std,courier,monospace;font-weight:400;font-style:normal;letter-spacing:4px;font-display:swap;margin-left: 2px;}
 .paragon_logo img{width:auto;height:45px;margin-top:4px}
 @media screen and (min-width:375){
     h1{line-height:.8;margin-top:8px}}
@@ -76,7 +79,7 @@ h1 .escape{line-height:1;font-family:courier-std,courier,monospace;font-weight:4
     .paragon_logo img{width:auto;height:45px;margin-top:4px}
     h1{display:inline-block}
     h1 .paragon{font-size:27px}
-    h1 .escape{font-size:8px}
+    h1 .escape{font-size:10.75px}
     .main_nav{top:64px}
     .games_hover,.nav_link{font-size:1.3rem}
     .nav_item svg{width:1rem;margin-bottom:0}
@@ -88,7 +91,7 @@ h1 .escape{line-height:1;font-family:courier-std,courier,monospace;font-weight:4
     .paragon_logo img{width:auto;height:66px}
     h1{line-height:1;margin-top:4px}
     h1 .paragon{font-size:43px}
-    h1 .escape{font-size:18.2px}
+    h1 .escape{font-size:18.2px;letter-spacing: 5.75px;}
     .games_hover,.nav_link{font-size:1.1rem}
     .games_hover svg{width:.85rem}
     .main_nav{top:80px}
